ingress.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.3.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Unknown URL
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: 
    match:
      resources:
        kinds:
        - Ingress
    validate:
      message: "Unknown ingress url."
      pattern:
        spec:
          tls:
          - hosts: "*lab.nirmata.co"
